# opencvradar

./: pyproject.toml
opencv_radar/: hello.py  object_detection.py
tests/: test_hello.py
tudodaerrado - Cópia/: teste.py
