[tool.poetry]
name = "opencv-radar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "opencv_radar"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
opencv-python = "^4.8.0.74"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
radar = "opencv_radar.object_detection:cli"